# CUITCCA

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SparkLLM.py  backend.bash  backend.bat  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  evals.yml
app/: main.py
app/configs/: config.py
app/dependencies/: __init__.py  index_dep.py
app/handlers/: handler.py
app/router/: __init__.py  index.py
backend/: .env  .env.example  .gitignore  requirements.txt
backend/app/: main.py
backend/app/admin/: admin.py
backend/app/configs/: __init__.py  config.py  embed_model.py  llm_predictor.py  load_env.py  observability.py
backend/app/dependencies/: __init__.py  index_dep.py  manage.py
backend/app/exceptions/: llama_exception.py
backend/app/handlers/: __init__.py  auth.py  database_handler.py  file_converters.py  graph_builder.py  handler.py  hybrid_retriever.py  index_crud.py  ingestion_pipeline.py  llama_handler.py  qa_workflow.py  vector_store.py
backend/app/models/: __init__.py  response.py  table.py  user.py
backend/app/router/: __init__.py  admin.py  graph.py  index.py  manage.py  response.py  test.py
backend/app/utils/: db.py  file.py  getbalance.py  llama.py  logger.py  rerank.py  security.py  upload.py
backend/indexes/ttt/: docstore.json  index_store.json  vector_store.json
backendlatest/: .env  access_stats.pkl  note.md  requirements.txt  test.py
backendlatest/app/configs/: __init__.py  config.py
backendlatest/app/dependencies/: __init__.py
backendlatest/app/exceptions/: llama_exception.py
backendlatest/app/handlers/: llama_handler.py
backendlatest/app/models/: user.py
backendlatest/app/router/: graph.py  index.py
backendlatest/app/utils/: llama.py
backendlatest/data/: 普通全日制本专科毕业证 (学位证) 遗失补办证明书流程.txt  转专业政策.txt
backendlatest/documents/information/: xueke.txt  附件4：成信党委发〔2022〕14号--成都信息工程大学委员会关于新闻宣传工作先进集体、个人和作品评选办法(3).docx  附件：《军事理论》课程网上注册、学习操作流程（手机版）.pptx
backendlatest/indexes/test/: index_store.json
backendlatest/indexes/学校信息/: docstore.json  index_store.json
backendlatest/indexes/学生服务/: docstore.json  index_store.json  vector_store.json
backendlatest/indexes/就业信息/: index_store.json
backendlatest/indexes/校园地图/: index_store.json
backendlatest/indexes/生活服务/: docstore.json  vector_store.json
backendlatest/indexes/问题集锦/: docstore.json
backendlatest/load/: 助学措施.txt
docs/: api.md  deployment.md  development.md  observability.md  troubleshooting.md
docs/superpowers/plans/: 2025-07-10-p0-sideeffects-imports-concurrency.md  2025-07-10-p1-refactor-responses.md  2025-07-10-p2-tests-ci-dev-deps.md  2025-07-10-p3-security-hardening.md  2026-07-10-frontend-unification.md  2026-07-10-knowledge-base-management.md  2026-07-11-backend-robustness-and-retrieval.md  2026-07-11-chat-experience-overhaul.md  2026-07-11-devops-and-cleanup.md  2026-07-11-llama-index-upgrade-plan.md  2026-07-24-documentation.md  2026-07-24-frontend-modernization.md
docs/superpowers/specs/: 2026-07-10-frontend-unification-design.md  2026-07-10-knowledge-base-management-design.md  (+2 more)
evals/: README.md  __init__.py  _common.py  generate_golden.py  golden.seed.jsonl  ingest_corpus.py  run_hybrid_eval.py  run_rerank_eval.py  run_retrieval_eval.py  run_workflow_retrieval_eval.py
evals/results/: hybrid_20260718_003856.json  rerank_20260713_062843.json  rerank_20260714_070043.json  rerank_20260718_004950.json  retrieval_20260713_012315.json  retrieval_20260713_013241.json  retrieval_20260713_065200.json  retrieval_20260714_070114.json  workflow_retrieval_20260713_071302.json
frontend/: base64.html  chat.js  face.html  feed_back.html  feedback.html  feedback.js  index.html  manage.html  manage.js  package.json  style.css  tsconfig.json  use_function.html  vite.config.ts  websocket.html
frontend/src/: chat.ts  feed_back.ts  feedback.ts  global.d.ts  manage.ts  sidebar.ts  use_function.ts
frontend/src/types/: api.ts
indexes/t/: docstore.json  index_store.json  vector_store.json
indexes/test/: docstore.json  vector_store.json
indexes/住宿/: docstore.json  index_store.json  vector_store.json
indexes/学生服务/: docstore.json  index_store.json  vector_store.json
indexes/就业信息/: docstore.json  vector_store.json
indexes/招生信息/: docstore.json  index_store.json  vector_store.json
indexes/校园地图/: docstore.json  vector_store.json
indexes/生活服务/: index_store.json
indexes/问题集锦/: index_store.json
scripts/: ingest_cori_online.py
tests/: _pathsetup.py  conftest.py  test_api_key_middleware.py  test_auth_middleware.py  test_cache_invalidation.py  test_chroma_store.py  test_cookie_config.py  test_db.py  test_document_parsers.py  test_docx_upload_regression.py  test_evals_smoke.py  test_extract_content_after_backslash.py  test_file_utils.py  test_generate_qa_batched.py  test_get_nodes_from_file.py  test_graph_builder.py  test_graph_router.py  test_graph_state.py  test_hybrid_retriever.py  test_index_crud.py  test_index_crud_async.py  test_index_dep.py  test_index_router.py  test_ingestion_pipeline.py  test_llama_exception.py  test_llama_handler.py  test_llama_utils.py  test_llm_predictor.py  test_main.py  test_main_workflow_http.py  test_manage_env_auth.py  test_observability.py  test_qa_generation_prompt.py  test_qa_workflow.py  test_qa_workflow_router.py  test_read_file_contents_encoding.py  test_reload_env_variables.py  test_rerank.py  test_response_router.py  test_security_utils.py  (+7 more)
tests/playwright/: check-pages.ts  package-lock.json  package.json  playwright.config.ts  test-chat-e2e.spec.ts  test-chat-uiux-final.spec.ts  test-chat-uiux.spec.ts  test-chat-visual.spec.ts  test-feedback-uiux.spec.ts  test-feedback.spec.ts  test-index.spec.ts  test-manage-uiux.spec.ts  test-manage.spec.ts  test-usefunction-uiux.spec.ts  test-usefunction.spec.ts
