[project]
name = "cuitcca"
version = "0.2.0"
description = "校园AI助手 - CUIT Campus AI Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.32",
    "pydantic[email]>=2.9.0",
    "aiofiles>=24.1.0",
    "openai>=2.45.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-llms-openai-like>=0.4.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "chromadb>=0.6.0,<2.0",
    "pandas>=2.2.3",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.10",
    "tiktoken>=0.13.0",
    "orjson>=3.11.9",
    "PyYAML>=6.0.3",
    "networkx>=3.6.1",
    "xlrd>=2.0.2",
    "XlsxWriter>=3.2.9",
    "tqdm>=4.68.3",
    "llama-index-readers-file>=0.6.0",
    "nltk==3.10.0",
    "transformers==5.3.0",
]

[dependency-groups]
# evals 组：评测语料导入（evals/ingest_corpus.py）解析 docx/xlsx 所需。
# 注意：线上 insert_into_index 同样走 SimpleDirectoryReader，这两个包不装的话
# 线上传 docx/xlsx 也会解析失败（ALLOWED_EXTENSIONS 却允许上传）。
evals = [
    "docx2txt>=0.8",
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/ChuanYuei/CUITCCA"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=backend/app --cov-report=term"
markers = [
    "eval: marks tests that run real retrieval/generation evaluations against a local Chroma index and/or a configured LLM (see evals/README.md); not run by default in CI, deselect explicitly with -m 'not eval' if ever mixed into the default suite.",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["N802", "N803", "N806", "UP042"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
