[project]
name = "cuitcca"
version = "0.2.0"
description = "校园AI助手 - CUIT Campus AI Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.32",
    "pydantic[email]>=2.9.0",
    "aiofiles>=24.1.0",
    "openai>=2.45.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-llms-openai-like>=0.4.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "chromadb>=0.6.0,<2.0",
    "pandas>=2.2.3",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.10",
    "tiktoken>=0.13.0",
    "orjson>=3.11.9",
    "PyYAML>=6.0.3",
    "networkx>=3.6.1",
    "xlrd>=2.0.2",
    "XlsxWriter>=3.2.9",
    "tqdm>=4.68.3",
    "llama-index-readers-file>=0.6.0",
    "nltk==3.10.0",
    "transformers==5.13.1",
    # SimpleDirectoryReader 解析 docx/xlsx 的实际依赖：ALLOWED_EXTENSIONS 允许上传
    # 这两类文件，缺了这两个包线上 insert_into_index 会直接 ImportError（Phase 0 发现的 bug）
    "docx2txt>=0.8",
    "openpyxl>=3.1",
    # LlamaIndex 可观测性（Phase 1）：OpenInference instrumentation + OTLP 导出，
    # 环境变量门控，见 backend/app/configs/observability.py 与 docs/observability.md
    "openinference-instrumentation-llama-index>=3.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[dependency-groups]
# rerank 组：evals/run_rerank_eval.py 的本地 cross-encoder 重排（bge-reranker-v2-m3）。
# 刻意不进主依赖——先用评测数据证明 rerank 值得上线再提升（见 evals/README.md）。
rerank = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/ChuanYuei/CUITCCA"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=backend/app --cov-report=term"
markers = [
    "eval: marks tests that run real retrieval/generation evaluations against a local Chroma index and/or a configured LLM (see evals/README.md); not run by default in CI, deselect explicitly with -m 'not eval' if ever mixed into the default suite.",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["N802", "N803", "N806", "UP042"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
